# minikin-rs

./: .gitmodules  Cargo.toml  build-static.sh  build-third-party.sh  build.rs  clean.sh  makefile.cargo  run.sh
minikin/: .gitignore  CMakeLists.txt  build-third-party.sh  library.cpp  library.h  main.cpp
minikin/src/bindings/: MinikinFontForTest.cpp  MinikinFontForTest.h
minikin/src/log/: log.h
minikin/src/minikin/: Hyphenator.cpp  LineBreaker.cpp
src/: lib.rs
